...
    onDismiss: () -> Unit,
) {
    AlertDialog(
        onDismissRequest = onDismiss,
        title = { Text(stringResource(R.string.my_more_items)) },
        text = {
            LazyColumn(Modifier.testTag("my-customization-list")) {
                items(customizableMySettings, key = { it.key }) { item ->
                    Row(
                        Modifier.fillMaxWidth()
                            .heightIn(min = 48.dp)
                            .testTag("my-option-${item.key}")
                            .combinedClickable(onClick = { onToggle(item.key) })
...
